--- a/helper.css
+++ b/helper.css
@@ -5,8 +5,8 @@
 *  Custom css helper classes
 *
 *  Author: Ahmet Faruk Bora
-*  Version: 1.0
-*  Latest update: Dec 9, 2015
+*  Version: 1.1
+*  Latest update: Dec 12, 2015
 *
 * ---------------------------------------------------------------------------- */
 .no-edge-top {
@@ -480,4 +480,58 @@ label.display-block {
 }
 .text-gray {
     color: #e2e2e2;
+}
+.fs10 {
+    font-size: 10px;
+}
+.fs11 {
+    font-size: 11px;
+}
+.fs12 {
+    font-size: 12px;
+}
+.fs13 {
+    font-size: 13px;
+}
+.fs14 {
+    font-size: 14px;
+}
+.fs15 {
+    font-size: 15px;
+}
+.fs16 {
+    font-size: 16px;
+}
+.fs18 {
+    font-size: 18px;
+}
+.fs24 {
+    font-size: 24px;
+}
+.fs28 {
+    font-size: 28px;
+}
+.fs36 {
+    font-size: 36px;
+}
+.fs48 {
+    font-size: 48px;
+}
+.fs64 {
+    font-size: 64px;
+}
+.fs72 {
+    font-size: 72px;
+}
+.fs50 {
+    font-size: 50%;
+}
+.fs75 {
+    font-size: 75%;
+}
+.fs85 {
+    font-size: 85%;
+}
+.fs125 {
+    font-size: 125%;
 }
