--- a/helper.css
+++ b/helper.css
@@ -2,11 +2,11 @@
 *
 *  # Helper classes
 *
-*  Custom css helper classes
+*  Custom helper classes
 *
 *  Author: Ahmet Faruk Bora
-*  Version: 1.1
-*  Latest update: Dec 12, 2015
+*  Version: 1.2
+*  Latest update: Dec 14, 2015
 *
 * ---------------------------------------------------------------------------- */
 .no-edge-top {
@@ -117,6 +117,12 @@ label.display-block {
 .no-margin-right {
   margin-right: 0!important;
 }
+.m-0 {
+  margin: 0px!important;
+}
+.m-3 {
+  margin: 3px!important;
+}
 .m-5 {
   margin: 5px!important;
 }
@@ -128,6 +134,12 @@ label.display-block {
 }
 .m-20 {
   margin: 20px!important;
+}
+.mt-0 {
+  margin-top: 0px!important;
+}
+.mt-3 {
+  margin-top: 3px!important;
 }
 .mt-5 {
   margin-top: 5px!important;
@@ -141,6 +153,12 @@ label.display-block {
 .mt-20 {
   margin-top: 20px!important;
 }
+.mb-0 {
+  margin-bottom: 0px!important;
+}
+.mb-3 {
+  margin-bottom: 3px!important;
+}
 .mb-5 {
   margin-bottom: 5px!important;
 }
@@ -152,6 +170,12 @@ label.display-block {
 }
 .mb-20 {
   margin-bottom: 20px!important;
+}
+.ml-0 {
+  margin-left: 0px!important;
+}
+.ml-3 {
+  margin-left: 3px!important;
 }
 .ml-5 {
   margin-left: 5px!important;
@@ -165,6 +189,12 @@ label.display-block {
 .ml-20 {
   margin-left: 20px!important;
 }
+.mr-0 {
+  margin-right: 0px!important;
+}
+.mr-3 {
+  margin-right: 3px!important;
+}
 .mr-5 {
   margin-right: 5px!important;
 }
@@ -176,6 +206,10 @@ label.display-block {
 }
 .mr-20 {
   margin-right: 20px!important;
+}
+.mv-3 {
+  margin-top: 3px!important;
+  margin-bottom: 3px!important;
 }
 .mv-5 {
   margin-top: 5px!important;
@@ -192,6 +226,10 @@ label.display-block {
 .mv-20 {
   margin-top: 20px!important;
   margin-bottom: 20px!important;
+}
+.mh-3 {
+  margin-left: 3px!important;
+  margin-right: 3px!important;
 }
 .mh-5 {
   margin-left: 5px!important;
@@ -224,6 +262,12 @@ label.display-block {
 .no-padding-right {
   padding-right: 0!important;
 }
+.p-0 {
+  padding: 0px!important;
+}
+.p-3 {
+  padding: 3px!important;
+}
 .p-5 {
   padding: 5px!important;
 }
@@ -235,6 +279,12 @@ label.display-block {
 }
 .p-20 {
   padding: 20px!important;
+}
+.pt-0 {
+  padding-top: 0px!important;
+}
+.pt-3 {
+  padding-top: 3px!important;
 }
 .pt-5 {
   padding-top: 5px!important;
@@ -248,6 +298,12 @@ label.display-block {
 .pt-20 {
   padding-top: 20px!important;
 }
+.pb-0 {
+  padding-bottom: 0px!important;
+}
+.pb-3 {
+  padding-bottom: 3px!important;
+}
 .pb-5 {
   padding-bottom: 5px!important;
 }
@@ -259,6 +315,12 @@ label.display-block {
 }
 .pb-20 {
   padding-bottom: 20px!important;
+}
+.pl-0 {
+  padding-left: 0px!important;
+}
+.pl-3 {
+  padding-left: 3px!important;
 }
 .pl-5 {
   padding-left: 5px!important;
@@ -272,6 +334,12 @@ label.display-block {
 .pl-20 {
   padding-left: 20px!important;
 }
+.pr-0 {
+  padding-right: 0px!important;
+}
+.pr-3 {
+  padding-right: 3px!important;
+}
 .pr-5 {
   padding-right: 5px!important;
 }
@@ -283,6 +351,10 @@ label.display-block {
 }
 .pr-20 {
   padding-right: 20px!important;
+}
+.pv-3 {
+  padding-top: 3px!important;
+  padding-bottom: 3px!important;
 }
 .pv-5 {
   padding-top: 5px!important;
@@ -299,6 +371,10 @@ label.display-block {
 .pv-20 {
   padding-top: 20px!important;
   padding-bottom: 20px!important;
+}
+.ph-3 {
+  padding-left: 3px!important;
+  padding-right: 3px!important;
 }
 .ph-5 {
   padding-left: 5px!important;
