--- a/helper.css
+++ b/helper.css
@@ -5,8 +5,8 @@
 *  Custom helper classes
 *
 *  Author: Ahmet Faruk Bora
-*  Version: 1.2
-*  Latest update: Dec 14, 2015
+*  Version: 1.3
+*  Latest update: Dec 27, 2015
 *
 * ---------------------------------------------------------------------------- */
 .no-edge-top {
@@ -135,6 +135,18 @@ label.display-block {
 .m-20 {
   margin: 20px!important;
 }
+.m-25 {
+  margin: 25px!important;
+}
+.m-30 {
+  margin: 30px!important;
+}
+.m-40 {
+  margin: 40px!important;
+}
+.m-50 {
+  margin: 50px!important;
+}
 .mt-0 {
   margin-top: 0px!important;
 }
@@ -152,6 +164,18 @@ label.display-block {
 }
 .mt-20 {
   margin-top: 20px!important;
+}
+.mt-25 {
+  margin-top: 25px!important;
+}
+.mt-30 {
+  margin-top: 30px!important;
+}
+.mt-40 {
+  margin-top: 40px!important;
+}
+.mt-50 {
+  margin-top: 50px!important;
 }
 .mb-0 {
   margin-bottom: 0px!important;
@@ -171,6 +195,18 @@ label.display-block {
 .mb-20 {
   margin-bottom: 20px!important;
 }
+.mb-25 {
+  margin-bottom: 25px!important;
+}
+.mb-30 {
+  margin-bottom: 30px!important;
+}
+.mb-40 {
+  margin-bottom: 40px!important;
+}
+.mb-50 {
+  margin-bottom: 50px!important;
+}
 .ml-0 {
   margin-left: 0px!important;
 }
@@ -189,6 +225,18 @@ label.display-block {
 .ml-20 {
   margin-left: 20px!important;
 }
+.ml-25 {
+  margin-left: 25px!important;
+}
+.ml-30 {
+  margin-left: 30px!important;
+}
+.ml-40 {
+  margin-left: 40px!important;
+}
+.ml-50 {
+  margin-left: 50px!important;
+}
 .mr-0 {
   margin-right: 0px!important;
 }
@@ -206,6 +254,18 @@ label.display-block {
 }
 .mr-20 {
   margin-right: 20px!important;
+}
+.mr-25 {
+  margin-right: 25px!important;
+}
+.mr-30 {
+  margin-right: 30px!important;
+}
+.mr-40 {
+  margin-right: 40px!important;
+}
+.mr-50 {
+  margin-right: 50px!important;
 }
 .mv-3 {
   margin-top: 3px!important;
@@ -227,6 +287,22 @@ label.display-block {
   margin-top: 20px!important;
   margin-bottom: 20px!important;
 }
+.mv-25 {
+  margin-top: 25px!important;
+  margin-bottom: 25px!important;
+}
+.mv-30 {
+  margin-top: 30px!important;
+  margin-bottom: 30px!important;
+}
+.mv-40 {
+  margin-top: 40px!important;
+  margin-bottom: 40px!important;
+}
+.mv-50 {
+  margin-top: 50px!important;
+  margin-bottom: 50px!important;
+}
 .mh-3 {
   margin-left: 3px!important;
   margin-right: 3px!important;
@@ -246,6 +322,22 @@ label.display-block {
 .mh-20 {
   margin-left: 20px!important;
   margin-right: 20px!important;
+}
+.mh-25 {
+  margin-left: 25px!important;
+  margin-right: 25px!important;
+}
+.mh-30 {
+  margin-left: 30px!important;
+  margin-right: 30px!important;
+}
+.mh-40 {
+  margin-left: 40px!important;
+  margin-right: 40px!important;
+}
+.mh-50 {
+  margin-left: 50px!important;
+  margin-right: 50px!important;
 }
 .no-padding {
   padding: 0!important;
@@ -280,6 +372,18 @@ label.display-block {
 .p-20 {
   padding: 20px!important;
 }
+.p-25 {
+  padding: 25px!important;
+}
+.p-30 {
+  padding: 30px!important;
+}
+.p-40 {
+  padding: 40px!important;
+}
+.p-50 {
+  padding: 50px!important;
+}
 .pt-0 {
   padding-top: 0px!important;
 }
@@ -297,6 +401,18 @@ label.display-block {
 }
 .pt-20 {
   padding-top: 20px!important;
+}
+.pt-25 {
+  padding-top: 25px!important;
+}
+.pt-30 {
+  padding-top: 30px!important;
+}
+.pt-40 {
+  padding-top: 40px!important;
+}
+.pt-50 {
+  padding-top: 50px!important;
 }
 .pb-0 {
   padding-bottom: 0px!important;
@@ -316,6 +432,18 @@ label.display-block {
 .pb-20 {
   padding-bottom: 20px!important;
 }
+.pb-25 {
+  padding-bottom: 25px!important;
+}
+.pb-30 {
+  padding-bottom: 30px!important;
+}
+.pb-40 {
+  padding-bottom: 40px!important;
+}
+.pb-50 {
+  padding-bottom: 50px!important;
+}
 .pl-0 {
   padding-left: 0px!important;
 }
@@ -334,6 +462,18 @@ label.display-block {
 .pl-20 {
   padding-left: 20px!important;
 }
+.pl-25 {
+  padding-left: 25px!important;
+}
+.pl-30 {
+  padding-left: 30px!important;
+}
+.pl-40 {
+  padding-left: 40px!important;
+}
+.pl-50 {
+  padding-left: 50px!important;
+}
 .pr-0 {
   padding-right: 0px!important;
 }
@@ -351,6 +491,18 @@ label.display-block {
 }
 .pr-20 {
   padding-right: 20px!important;
+}
+.pr-25 {
+  padding-right: 25px!important;
+}
+.pr-30 {
+  padding-right: 30px!important;
+}
+.pr-40 {
+  padding-right: 40px!important;
+}
+.pr-50 {
+  padding-right: 50px!important;
 }
 .pv-3 {
   padding-top: 3px!important;
@@ -372,6 +524,22 @@ label.display-block {
   padding-top: 20px!important;
   padding-bottom: 20px!important;
 }
+.pv-25 {
+  padding-top: 25px!important;
+  padding-bottom: 25px!important;
+}
+.pv-30 {
+  padding-top: 30px!important;
+  padding-bottom: 30px!important;
+}
+.pv-40 {
+  padding-top: 40px!important;
+  padding-bottom: 40px!important;
+}
+.pv-50 {
+  padding-top: 50px!important;
+  padding-bottom: 50px!important;
+}
 .ph-3 {
   padding-left: 3px!important;
   padding-right: 3px!important;
@@ -391,6 +559,22 @@ label.display-block {
 .ph-20 {
   padding-left: 20px!important;
   padding-right: 20px!important;
+}
+.ph-25 {
+  padding-left: 25px!important;
+  padding-right: 25px!important;
+}
+.ph-30 {
+  padding-left: 30px!important;
+  padding-right: 30px!important;
+}
+.ph-40 {
+  padding-left: 40px!important;
+  padding-right: 40px!important;
+}
+.ph-50 {
+  padding-left: 50px!important;
+  padding-right: 50px!important;
 }
 .no-border {
   border: 0!important;
