--- a/helper.css
+++ b/helper.css
@@ -5,8 +5,8 @@
 *  Custom helper classes
 *
 *  Author: Ahmet Faruk Bora
-*  Version: 1.3
-*  Latest update: Dec 27, 2015
+*  Version: 1.4
+*  Latest update: Dec 29, 2015
 *
 * ---------------------------------------------------------------------------- */
 .no-edge-top {
@@ -797,4 +797,16 @@ label.display-block {
 }
 .fs-200 {
     font-size: 200%;
+}
+.text-blur {
+    color: transparent;
+    text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 10px;
+}
+.text-blur-light {
+    color: transparent;
+    text-shadow: rgba(0, 0, 0, 0.95) 0px 0px 10px;
+}
+.text-blur-dark {
+    color: transparent;
+    text-shadow: rgba(0, 0, 0, 0.95) 0px 0px 10px;
 }
