--- a/helper.css
+++ b/helper.css
@@ -808,17 +808,7 @@
 /*
  * Text Transform
  */
-.text-transform-none
-{
-    text-transform: none;
-}
-
-.text-transform-initial
-{
-    text-transform: initial;
-}
-
-.text-transform-inherit
-{
-    text-transform: inherit;
-}
+.text-transform-none { text-transform: none; }
+.text-transform-initial { text-transform: initial; }
+.text-transform-inherit { text-transform: inherit; }
+.text-transform-capitalize { text-transform: capitalize; }
