--- a/helper.css
+++ b/helper.css
@@ -5,8 +5,8 @@
 *  Custom helper classes
 *
 *  Author: Ahmet Faruk Bora
-*  Version: 1.7
-*  Latest update: Apr 20, 2017
+*  Version: 1.8
+*  Latest update: July 24, 2017
 *
 * ---------------------------------------------------------------------------- */
 
@@ -629,31 +629,73 @@
     .display-block-xlg { display: block !important; }
     .display-inline-xlg { display: inline !important; }
     .display-inline-block-xlg { display: inline-block !important; }
+    .display-flex-xlg { display: flex !important; }
+    .display-flex-center-xlg { display: flex !important; align-items : center !important; }
+    .display-grid-xlg { display: grid !important; }
+    .display-table-xlg { display: table !important; }
+    .display-table-row-xlg { display: table-row !important; }
+    .display-table-cell-xlg { display: table-cell !important; }
+    .display-table-column-xlg { display: table-column !important; }
 }
 @media (min-width: 1200px) {
     .display-block-lg { display: block !important; }
     .display-inline-lg { display: inline !important; }
     .display-inline-block-lg { display: inline-block !important; }
+    .display-flex-lg { display: flex !important; }
+    .display-flex-center-lg { display: flex !important; align-items : center !important; }
+    .display-grid-lg { display: grid !important; }
+    .display-table-lg { display: table !important; }
+    .display-table-row-lg { display: table-row !important; }
+    .display-table-cell-lg { display: table-cell !important; }
+    .display-table-column-lg { display: table-column !important; }
 }
 @media (min-width: 1025px) and (max-width: 1199px) {
     .display-block-md { display: block !important; }
     .display-inline-md { display: inline !important; }
     .display-inline-block-md { display: inline-block !important; }
+    .display-flex-md { display: flex !important; }
+    .display-flex-center-md { display: flex !important; align-items : center !important; }
+    .display-grid-md { display: grid !important; }
+    .display-table-md { display: table !important; }
+    .display-table-row-md { display: table-row !important; }
+    .display-table-cell-md { display: table-cell !important; }
+    .display-table-column-md { display: table-column !important; }
 }
 @media (min-width: 769px) and (max-width: 1024px) {
     .display-block-sm { display: block !important; }
     .display-inline-sm { display: inline !important; }
     .display-inline-block-sm { display: inline-block !important; }
+    .display-flex-sm { display: flex !important; }
+    .display-flex-center-sm { display: flex !important; align-items : center !important; }
+    .display-grid-sm { display: grid !important; }
+    .display-table-sm { display: table !important; }
+    .display-table-row-sm { display: table-row !important; }
+    .display-table-cell-sm { display: table-cell !important; }
+    .display-table-column-sm { display: table-column !important; }
 }
 @media (max-width: 768px) {
     .display-block-xs { display: block !important; }
     .display-inline-xs { display: inline !important; }
     .display-inline-block-xs { display: inline-block !important; }
+    .display-flex-xs { display: flex !important; }
+    .display-flex-center-xs { display: flex !important; align-items : center !important; }
+    .display-grid-xs { display: grid !important; }
+    .display-table-xs { display: table !important; }
+    .display-table-row-xs { display: table-row !important; }
+    .display-table-cell-xs { display: table-cell !important; }
+    .display-table-column-xs { display: table-column !important; }
 }
 @media (max-width: 575px) {
     .display-block-xxs { display: block !important; }
     .display-inline-xxs { display: inline !important; }
     .display-inline-block-xxs { display: inline-block !important; }
+    .display-flex-xxs { display: flex !important; }
+    .display-flex-center-xxs { display: flex !important; align-items : center !important; }
+    .display-grid-xxs { display: grid !important; }
+    .display-table-xxs { display: table !important; }
+    .display-table-row-xxs { display: table-row !important; }
+    .display-table-cell-xxs { display: table-cell !important; }
+    .display-table-column-xxs { display: table-column !important; }
 }
 
 
